--- a/views/index.ejs
+++ b/views/index.ejs
@@ -132,7 +132,7 @@
                             Node.js. Passionate about building user-friendly web applications and continuously learning
                             modern development practices.
                         </p>
-                        <a href="/assets/images/Profile Resume.pdf" target="_blank">
+                        <a href="/assets/images/Profile-Resume.pdf" target="_blank">
                             <button class="content-button" data-aos="fade-right" data-aos-delay="300">Download
                                 Resume</button>
                         </a>
